# citeline

./: .gitignore  Embedders.py  Enrichers.py  Metrics.py  README.md  Rerankers.py  TextEnrichers.py  add_topics.ipynb  astrosage.ipynb  bad_examples.jsonl  baseline.ipynb  baseline.yaml  batch_run_experiments.sh  bert_embeddings.ipynb  bge_embeddings.ipynb  bge_small_embeddings.ipynb  big_error_analysis.ipynb  build_better_dataset.py  build_dataset.py  build_test_set.ipynb  build_test_set.py  check_embeddings_norm.ipynb  clean_findings.ipynb  compare_rrf_methods.py  compute_batch_size.py  compute_difference_vector.py  compute_optimal_embedding_batch_size.ipynb  contrastive_loss_plan.md  convert_dataset_dates.ipynb  create_chunks.ipynb  create_citation_dataset.py  create_data_sample.ipynb  create_dataset.py  create_vector_db.py  database.py  dataset_builder.py  dataset_integrity_confirm.ipynb  db_chunk_hydration.ipynb  db_contribution_hydration.ipynb  db_contribution_long_hydration.ipynb  (+132 more)
apis/: openai_client.py
chunking/: LengthPreservingChunker.py  chunker_scores.csv  chunking_grid_search.py  finish_gridsearch.py  first_paragraph_sentences.py  semantic_chunker.ipynb  text_splitter_demo.ipynb  text_splitter_gridsearch.py
database/: check_test_set.ipynb  create_collections.sh  create_contribution_table.sql  create_database.py  create_database.sql  create_milvus_collection.py  create_papers_table.py  database.py  index_build_progress.sql  load_chunks.py  migrate_pg_to_milvus.py  milvus.py  milvusdb.py  test_db.ipynb  test_insert.ipynb  test_query.py  test_records.ipynb
(+957 files in other folders)
