[project]
name = "citeline"
version = "0.1.0"
description = "Citation prediction system"
authors = [
  {name = "Benjamin Basseri", email = "bbasseri@fas.harvard.edu"}
]
dependencies = []

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120

